--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>Test</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Shadows in the Dark</title>
+    <link rel="stylesheet" href="CSS/main.css">
+  </head>
+  <body>
+    <h1 id="intro1" style="opacity:0; transition: opacity 1.4s;">SHADOWS IN THE DARK</h1
+    <p id="intro2" style="opacity:0; transition: opacity 1.4s;">is a game inspired by the text based adventure games of old</p>
+    <p id="intro3" style="opacity:0; transition: opacity 1.4s;">Such as Zork or choose your own adventure books</p>
+    <button id="button" onclick="startGame()" style="opacity:0; transition: opacity 1.4s;">Begin Game</button>
+    <p id="intro4" style="opacity:0; transition: opacity 1.4s;"><em>NOTE:</em> Only the first chapter is complete so far</p>
+    <br>
+    <p id="intro5" style="opacity:0; transition: opacity 1.4s;">Created by Carter Sondrol</p>
+    <script src="JavaScript/main.js" charset="utf-8"></script>
+  </body>
+</html>
